<resources>
    <string name="app_name">GymTracker</string>
    <string name="text_subs">Subscription:</string>
    <string name="signup">Sign up</string>
    <string name="signin">Sign in</string>
    <string name="copyright">© 2020/2021 - GymTracker Group</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="account">Account</string>
    <string name="email">Email</string>
    <string name="create">New account</string>
    <string name="create_account">Create</string>
    <string name="newaccount">You dont have an account?</string>
    <string name="error">Error!</string>
    <string name="welcome">Welcome!</string>
    <string name="settings">Settings</string>
    <string name="training">Training Area</string>
    <string name="fill_form">Please fill the input fields!</string>
    <string name="signin_hint">Login</string>
    <string name="statistics_title">Statistics</string>
    <string name="signup_hint">Create a new account</string>
    <string name="welcome_back">Welcome back,</string>
    <string name="empty" />
    <string name="email_error">Email error</string>
    <string name="name_error">Name error</string>
    <string name="password_error">Password error</string>
    <string name="toast_qrcode_permission_denied">Camera access permission request denied!</string>
    <string name="toast_qrcode_error">Error!</string>
    <string name="toast_qrcode_scanned_error">Scan the right QRcode!</string>
    <string name="scanner">Scanner</string>
    <string name="keyInput">Insert the key</string>
    <string name="profile">Profile</string>
    <string name="color_picker">App Color</string>
    <string name="app_color">App Color</string>
    <string name="dark_switch">Dark Mode</string>
    <string name="temperature_switch">Temperature</string>
    <string name="step_counter_switch">Step Counter</string>
    <string name="humidity_switch">Humidity</string>
    <string name="save">save</string>
    <string name="reset">Reset</string>
    <string name="reset_account">Would you change account?</string>
    <string name="exit">Exit</string>
    <string name="gym_temperature">Temperature :</string>
    <string name="step_counter">Step counter :</string>
    <string name="humidity">Humidity :</string>
    <string name="calendar">Calendar</string>
    <string name="sensor_not_available">Not available</string>
    <string name="sensor_disabled">Sensor disabled</string>
    <string name="settings_saved">Settings Saved</string>
    <string name="no_registrations">No registrations found</string>
    <string-array name="color_array">
        <item>Blue</item>
        <item>Green</item>
        <item>Orange</item>
    </string-array>
</resources>