<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/default_margin"
        android:gravity="center">
        <TextView android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/tv_title_margin"
            android:textColor="@color/white"
            android:textSize="@dimen/text_high_size"
            android:text="@string/login" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_profile_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/et_default_margin"
            android:layout_marginEnd="@dimen/et_default_margin"
            android:layout_below="@id/tv_login"
            android:hint="@string/account"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/white"
            app:endIconMode="clear_text"
            app:hintTextColor="@color/white">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/et_profile_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_profile_name"
            android:layout_marginStart="@dimen/et_default_margin"
            android:layout_marginEnd="@dimen/et_default_margin"
            android:hint="@string/password"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/white"
            app:endIconMode="clear_text"
            app:hintTextColor="@color/white"
            android:inputType="textPassword">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>
        <Button android:id="@+id/b_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_profile_password"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/et_default_margin"
            android:text="@string/login"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_low_size"
            android:backgroundTint="@color/white"/>
    </RelativeLayout>
</RelativeLayout>