<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".taskactivity.SettingsActivity"
    style="@style/Theme.GymTracker.task"
    android:background="@color/white">
    <TextView android:id="@+id/tv_date_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_date"
        android:layout_marginTop="@dimen/margin_date_top"
        android:layout_alignParentEnd="true"
        android:textColor="@color/colorPrimaryLowOpacity"
        android:fontFamily="@font/helvetica_bold"
        android:textSize="@dimen/text_low_size"/>
    <LinearLayout android:id="@+id/header_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:orientation="horizontal"
        android:gravity="center_vertical|end">
        <TextView android:id="@+id/settings_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/title_margin"
            android:layout_marginBottom="@dimen/title_margin"
            android:text="@string/settings"
            android:textColor="@color/colorPrimary"
            android:letterSpacing="-0.03"
            android:textFontWeight="1000"
            android:textSize="@dimen/title_text_size"
            android:fontFamily="@font/helvetica_bold"
            android:layout_marginEnd="@dimen/title_margin_right" />
    </LinearLayout>
    <RelativeLayout android:id="@+id/settings_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header_settings">
        <TextView android:id="@+id/color_setter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_color"
            android:textColor="@color/colorPrimaryDark"
            android:layout_margin="@dimen/title_margin"/>
        <Spinner android:id="@+id/s_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/color_setter"
            android:layout_marginTop="@dimen/title_margin"
            android:layout_marginEnd="@dimen/switch_dark"
            android:layout_marginStart="@dimen/switch_dark"
            android:entries="@array/color_array"
            android:textAlignment="center"/>
        <LinearLayout android:id="@+id/ll_dark_mode_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_below="@id/color_setter"
            android:layout_marginBottom="@dimen/title_margin">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/title_margin"
                android:layout_marginEnd="@dimen/title_margin"
                android:text="@string/dark_switch"
                android:textColor="@color/colorPrimaryDark"/>
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/dark_mode_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/switch_dark"
                android:theme="@style/SettingsSwitch"/>
        </LinearLayout>
        <LinearLayout android:id="@+id/ll_temperature_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_below="@id/ll_dark_mode_switch">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/title_margin"
                android:layout_marginEnd="@dimen/title_margin"
                android:text="@string/temperature_switch"
                android:textColor="@color/colorPrimaryDark"/>
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/temperature_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/switch_dark"
                android:theme="@style/SettingsSwitch"/>
        </LinearLayout>



    </RelativeLayout>


</RelativeLayout>